; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx5/extr_main.c_is_valid_esp_aes_gcm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx5/extr_main.c_is_valid_esp_aes_gcm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { i32 }
%struct.mlx5_flow_spec = type { %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32 }
%struct.mlx5_flow_act = type { i32 }

@MLX5_FLOW_CONTEXT_ACTION_ENCRYPT = common dso_local global i32 0, align 4
@MLX5_FLOW_CONTEXT_ACTION_DECRYPT = common dso_local global i32 0, align 4
@MLX5_FLOW_CONTEXT_ACTION_DROP = common dso_local global i32 0, align 4
@VALID_SPEC_NA = common dso_local global i32 0, align 4
@FLOW_CONTEXT_HAS_TAG = common dso_local global i32 0, align 4
@VALID_SPEC_VALID = common dso_local global i32 0, align 4
@VALID_SPEC_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_core_dev*, %struct.mlx5_flow_spec*, %struct.mlx5_flow_act*, i32)* @is_valid_esp_aes_gcm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_valid_esp_aes_gcm(%struct.mlx5_core_dev* %0, %struct.mlx5_flow_spec* %1, %struct.mlx5_flow_act* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.mlx5_core_dev*, align 8
  %7 = alloca %struct.mlx5_flow_spec*, align 8
  %8 = alloca %struct.mlx5_flow_act*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %6, align 8
  store %struct.mlx5_flow_spec* %1, %struct.mlx5_flow_spec** %7, align 8
  store %struct.mlx5_flow_act* %2, %struct.mlx5_flow_act** %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load %struct.mlx5_flow_spec*, %struct.mlx5_flow_spec** %7, align 8
  %15 = getelementptr inbounds %struct.mlx5_flow_spec, %struct.mlx5_flow_spec* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  store i32* %16, i32** %10, align 8
  %17 = load %struct.mlx5_flow_act*, %struct.mlx5_flow_act** %8, align 8
  %18 = getelementptr inbounds %struct.mlx5_flow_act, %struct.mlx5_flow_act* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @MLX5_FLOW_CONTEXT_ACTION_ENCRYPT, align 4
  %21 = load i32, i32* @MLX5_FLOW_CONTEXT_ACTION_DECRYPT, align 4
  %22 = or i32 %20, %21
  %23 = and i32 %19, %22
  store i32 %23, i32* %11, align 4
  %24 = load i32*, i32** %10, align 8
  %25 = call i32 @mlx5_fs_is_ipsec_flow(i32* %24)
  store i32 %25, i32* %12, align 4
  %26 = load %struct.mlx5_flow_act*, %struct.mlx5_flow_act** %8, align 8
  %27 = getelementptr inbounds %struct.mlx5_flow_act, %struct.mlx5_flow_act* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @MLX5_FLOW_CONTEXT_ACTION_DROP, align 4
  %30 = and i32 %28, %29
  store i32 %30, i32* %13, align 4
  %31 = load i32, i32* %11, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %4
  %34 = load i32, i32* @VALID_SPEC_NA, align 4
  store i32 %34, i32* %5, align 4
  br label %61

35:                                               ; preds = %4
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %57

38:                                               ; preds = %35
  %39 = load i32, i32* %12, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %57

41:                                               ; preds = %38
  %42 = load i32, i32* %9, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %55

44:                                               ; preds = %41
  %45 = load i32, i32* %13, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %57, label %47

47:                                               ; preds = %44
  %48 = load %struct.mlx5_flow_spec*, %struct.mlx5_flow_spec** %7, align 8
  %49 = getelementptr inbounds %struct.mlx5_flow_spec, %struct.mlx5_flow_spec* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = load i32, i32* @FLOW_CONTEXT_HAS_TAG, align 4
  %53 = and i32 %51, %52
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %57, label %55

55:                                               ; preds = %47, %41
  %56 = load i32, i32* @VALID_SPEC_VALID, align 4
  br label %59

57:                                               ; preds = %47, %44, %38, %35
  %58 = load i32, i32* @VALID_SPEC_INVALID, align 4
  br label %59

59:                                               ; preds = %57, %55
  %60 = phi i32 [ %56, %55 ], [ %58, %57 ]
  store i32 %60, i32* %5, align 4
  br label %61

61:                                               ; preds = %59, %33
  %62 = load i32, i32* %5, align 4
  ret i32 %62
}

declare dso_local i32 @mlx5_fs_is_ipsec_flow(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
